# McCode

./: .clang-format  .gitignore  CHANGES_McStas  CHANGES_McXtrace  CMakeLists.txt  README.md  Samples_SpinWave_BCO.instr  Test_KN_union.instr  environment.yml  mcstas-environment.yml  mcxtrace-environment.yml  tex_snippets
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: mccode-pooch-registries-dispatch.yml  mcstas-autobuild.yml  mcstas-basictest.yml  mcstas-conda-basictest.yml  mcstas-conda-gpu.yml  mcstas-conda-testsuite.yml  mcstas-testsuite.yml  mcstas-winbasictest-mingw.yml  mcstas-winbasictest-msvc.yml  (+8 more)
INSTALL-McStas/: README.md
INSTALL-McXtrace/: README.md
buildscripts/: build_debs_mcstas  build_debs_mcstas_arm64  build_debs_mcxtrace  build_debs_mcxtrace_arm64  build_loc_3.x_tree  build_manuals_mcstas  build_manuals_mcxtrace  build_pkg_ghostbsd  build_windows_mcstas  build_windows_mcstas_conda  build_windows_mcxtrace  build_windows_mcxtrace_conda  xbuild_loc_3.x_tree
conda-snips-windows/: README.md
devel/: clang-format
doc/: README.md
docs/: pull_request_template.md
mccode/: CMakeLists.txt  mccode.md.in
mccode/nlib/share/: mcstas-r.c  mcstas-r.h  pol-lib.c
mccode/src/: cexp.c  cogen.c.in  file.c  instrument.l  instrument.y  list.c  mcformat.c.in  port.c  port.h.in  py-cexp.c  py-instrument.l  py-instrument.y  pygen.c.in  pygen.h  windirent.h
mccode/xlib/share/: mcxtrace-r.c  mcxtrace-r.h
mcstas-comps/: CMakeLists.txt
mcstas/src/: file.c  (+2 more)
mcxtrace-comps/: CMakeLists.txt
obsolete-files/: CHANGES
(+3416 files in other folders)
